Fix spacing issues below 916 in recent project

--- a/styles.css
+++ b/styles.css
@@ -387,8 +387,14 @@ footer {
   .cta-buttons {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
-    align-items: center;
-    gap: 15px;
+  }
+}
+
+@media (max-width: 916px) {
+  /*recent projects responsive*/
+  .project-grid {
+    grid-template-columns: repeat(1, 1fr);
+    gap: 100px;
   }
 }
 
@@ -432,10 +438,6 @@ footer {
     padding: 10px;
     border-width: 3px;
   }
-
-  .project-grid {
-    grid-template-columns: repeat(1, 1fr);
-  }
 }
 
 @media (max-width: 652px) {
@@ -445,12 +447,6 @@ footer {
     flex-direction: column;
     margin-right: 0;
     margin-bottom: 5px;
-  }
-
-  /* Introduction section responsive */
-  .cta-buttons {
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
   }
 }
 
